syntax = "proto3";

import "Protos/utils.proto";

option csharp_namespace = "GrpcService";

package tarot;

service User {
  rpc GetUser (UserIdRequest) returns (UserReply);
  rpc GetUsers (Pagination) returns (UsersReply);
}

message UserIdRequest {
  uint64 id = 1;
}

message UsersReply {
  repeated UserReply users = 1;
}

message UserReply {
  uint64 id = 1;
}